bugfixes: modal box alignment

--- a/src/ProductDetails/sass/added-to-basket-modal.scss
+++ b/src/ProductDetails/sass/added-to-basket-modal.scss
@@ -1,18 +1,12 @@
 #added-to-basket--modal {
   .modal-body {
-    padding: 40px 0 !important;
     background: #fff;
-    p {
-      margin-top: 20px;
-      font-weight: 600;
-    }
+    height: auto !important;
+    text-align: center;
+    padding: 40px;
   }
-  .modal-footer {
-    background: #fff;
+  .modal-footer .gift--more-drinks{
+    padding: 16px 20px;
     border-top: 1px solid #dfdfdf;
-    padding:  16px 20px;
   }
- .modal-container {
-   padding: 0 !important;
- }
 }
